# ERPT-Render-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  sider.yml
Pre-work/AddonTutorial/: CursorArray.py  MoveByOne.py  SimpleRenderEngine.py
Pre-work/AddonTutorial/ExecScripts/: RunCursorArray.sh  RunMoveByOne.sh  RunSimpleRenderEngine.sh
Pre-work/BlenderSocket/: main.py
Pre-work/CudaSocket/: CMakeLists.txt  main.cu
Pre-work/Engine POC/POCEngine/: __init__.py  engine.py  install.sh  test.py
Pre-work/PythonAndC/: CMakeLists.txt  RunMain.sh  __init__.py  install.sh  main.cpp  main.py
cmake/: CmakeMacros.cmake  FindOptiX.cmake
include/: CUDABuffer.h  communication.h  constants.h  drawings.cuh  kernels.cuh  main.h  optixLaunchParameters.h  raytracing.h  transformations.cuh  types.h
labs/: GetMeshData.py  convertLabs.cpp
src/: communication.cpp  cpuFunctions.cpp  drawings.cu  kernels.cu  optixDevicePrograms.cu  raytracing.cpp  transformations.cu
